Bug 175283 - Pressing ^C freezer term.
Summary: Pressing ^C freezer term.
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.1
Platform: unspecified Solaris
: NOR crash
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-11-16 11:16 UTC by Edward OCallaghan
Modified: 2017-05-21 10:21 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Edward OCallaghan 2008-11-16 11:16:27 UTC
Version:           2.1 (using 4.1.3 (KDE 4.1.3), compiled sources)
Compiler:          cc
OS:                SunOS (i86pc) release 5.11

If you have a line typed, say:
$ gunzip -cd foo | tar -xf -
and you press, ^C, the shell should drop to a new line and cancel the last line typed. Like so;
$ 
Instead the session freezes so you can no longer type anything. Thus, you have to create a new tab to continue.

Thanks for your time,
Edward O'Callaghan.
Comment 1 groot 2008-11-16 11:26:07 UTC
Patch 16 (kdelibs-kpty.diff) was dropped from KDE 4.1.0 to 4.1.3, which re-introduces the bug. It's not actually in Konsole. Merged into trunk, anyway, and keep watching the packages in the 4.1 series for this regression.
Comment 2 groot 2008-11-16 11:41:32 UTC
SVN commit 884926 by adridg:

Fix 95% of bug #175283; there are still sequences that will wedge a pty, but I have not been able to reliably reproduce them.

Backport not necessary, we'll keep it in with the Solaris patches for now.

BUG: 175283


 M  +21 -0     kptydevice.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=884926
Comment 3 Peter Wu 2017-05-21 10:21:32 UTC
This issue was mentioned in commit
https://git.kernel.org/pub/scm/linux/kernel/git/stable/linux-stable.git/commit/?id=77dae6134440420bac334581a3ccee94cee1c054

"tty: pty: Fix ldisc flush after userspace become aware of the data already"

A recent incarnation of this issue could be bug 372991.