Fix 95% of bug #175283; there are still sequences that will wedge a pty, but I have not been able to reliably reproduce them.

Backport not necessary, we'll keep it in with the Solaris patches for now.

BUG: 175283

svn path=/trunk/KDE/kdelibs/; revision=884926